Styles : fix gap in body between containers

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  gap: 20px;
 
   width: 100%;
   min-height: 100svh;
